[package]
name = "plz"
version = "0.0.0"
edition = "2018"
authors = ["RanolP <public.ranolp@gmail.com>"]
license = "MIT"
license-file = "./LICENSE"
homepage = "https://crates.io/crates/plz"
repository = "https://github.com/RanolP/plz"
documentation = "https://docs.rs/plz"
readme = "README.md"
description = """
Rust clone of nvbn/thefuck, plz makes previous command work as well as we can.
"""

[dependencies]
